<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.sim0mq</groupId>
  <artifactId>sim0mq-demo</artifactId>
  <version>2.1.0</version>

  <name>Sim0MQ demo classes</name>
  <description>Demo classes for the Sim0MQ project</description>
  <url>https://www.sim0mq.org</url>

  <inceptionYear>2016</inceptionYear>

  <properties>
    <jdk.version>11</jdk.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>${jdk.version}</maven.compiler.source>
    <maven.compiler.target>${jdk.version}</maven.compiler.target>

    <sonar.scm.disabled>true</sonar.scm.disabled>

    <sim0mq.version>${project.version}</sim0mq.version>
    <djunits.version>4.01.06</djunits.version>
    <djutils.version>1.05.04</djutils.version>
    <dsol.version>4.0.0</dsol.version>
    <jeromq.version>0.5.2</jeromq.version>
    <junit.version>4.12</junit.version>

    <maven.compiler.version>3.10.1</maven.compiler.version>
    <maven.resources.version>3.3.0</maven.resources.version>
  </properties>


  <!-- dependency versions for all projects -->

  <dependencies>
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>${junit.version}</version>
      <scope>test</scope>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.sim0mq</groupId>
      <artifactId>sim0mq</artifactId>
      <version>${sim0mq.version}</version>
    </dependency>
    <dependency>
      <groupId>nl.tudelft.simulation</groupId>
      <artifactId>dsol-core</artifactId>
      <version>${dsol.version}</version>
    </dependency>
  </dependencies>


  <!-- Build Settings -->

  <build>
    <directory>target</directory>
    <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
    <testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>
    <outputDirectory>${basedir}/target/classes</outputDirectory>
    <testOutputDirectory> ${basedir}/target/test-classes</testOutputDirectory>

    <resources>
      <resource>
        <directory>${basedir}/src/main/resources</directory>
        <targetPath>${project.build.directory}/classes</targetPath>
        <includes>
          <include>**/*</include>
        </includes>
      </resource>
    </resources>
    <testResources>
      <testResource>
        <directory>${basedir}/src/test/resources</directory>
        <targetPath>${project.build.directory}/test-classes</targetPath>
        <includes>
          <include>**/*</include>
        </includes>
      </testResource>
      <testResource>
        <directory>${basedir}/src/main/resources</directory>
        <targetPath>${project.build.directory}/test-classes</targetPath>
        <includes>
          <include>**/*</include>
        </includes>
      </testResource>
    </testResources>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${maven.compiler.version}</version>
        <configuration>
          <source>${jdk.version}</source>
          <target>${jdk.version}</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-resources-plugin</artifactId>
        <version>${maven.resources.version}</version>
        <executions>
          <execution>
            <id>default-resources</id>
            <phase>validate</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <resources>
                <resource>
                  <directory>${basedir}/src/main/resources</directory>
                </resource>
              </resources>
              <outputDirectory>${basedir}/target/classes</outputDirectory>
            </configuration>
          </execution>
          <execution>
            <id>default-testResources</id>
            <phase>validate</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <resources>
                <resource>
                  <directory>${basedir}/src/test/resources</directory>
                </resource>
              </resources>
              <outputDirectory>${basedir}/target/test-classes</outputDirectory>
            </configuration>
          </execution>
          <execution>
            <id>testResources main</id>
            <phase>validate</phase>
            <goals>
              <goal>copy-resources</goal>
            </goals>
            <configuration>
              <resources>
                <resource>
                  <directory>${basedir}/src/main/resources</directory>
                </resource>
              </resources>
              <outputDirectory>${basedir}/target/test-classes</outputDirectory>
            </configuration>
          </execution>
        </executions>
      </plugin>

    </plugins>

  </build>


  <licenses>
    <license>
      <name>BSD-3 style license</name>
      <url>https://sim0mq.org/docs/latest/license.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>


  <developers>
    <developer>
      <id>averbraeck</id>
      <name>Alexander Verbraeck</name>
      <email>a.verbraeck@tudelft.nl</email>
      <url>https://www.tbm.tudelft.nl/averbraeck</url>
      <organization>Delft University of Technology, the Netherlands</organization>
      <organizationUrl>https://www.simulation.tudelft.nl</organizationUrl>
      <timezone>1</timezone>
      <roles>
        <role>architect</role>
        <role>developer</role>
        <role>maintainance</role>
      </roles>
    </developer>
  </developers>

</project>